--- a/src/App.scss
+++ b/src/App.scss
@@ -22,12 +22,26 @@
 
 }
 .body-main{
-  margin-top: 4.5rem;
+  margin-top: 5rem;
   height: 100%;
 }
 .navbar{
   box-shadow: 2px 2px 5px 0px #00000040;
 }
+.card-columns {
+  text-align: left;
+}
+.card-columns .anime {
+  margin-bottom: 1rem;
+  text-align: center;
+  height: 16rem;
+}
+@media (min-width: 576px){
+  .card-columns {
+    column-count: 6;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
