--- a/src/App.scss
+++ b/src/App.scss
@@ -1,73 +1,21 @@
-.App {
-  text-align: center;
-  height: 100%;
+.App{
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 4vmin;
-  pointer-events: none;
+.App-header{
+  display: inherit;
+  height: 5vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 .body-main{
-  margin-top: 5.5rem;
-  height: 100%;
-}
-.navbar{
-  box-shadow: 2px 2px 5px 0px #00000040;
-}
-.card-columns {
-  text-align: left;
-}
-.card-columns .anime {
-  z-index: 1;
-  cursor: pointer;
-  margin-bottom: 1rem;
-  text-align: center;
-  height: 16rem;
-  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.29);
-  transition: 0.5s;
-}
-.anime:hover{
-  transition: 0.3s;
-  box-shadow: 8px 5px 2px 0px rgba(0, 0, 0, 0.29);
-  transform: translateY(-0.45rem);
-  .imagem-anime{
-    transition: 0.5s;
-    filter: brightness(0.2);
-  }
-}
-.anime .card-body{
-  color: white;
-}
-.imagem-anime{
-  z-index: 0;
-  transition: 0.5s;
-  filter: brightness(0.2) blur(0.25rem);
-}
-.container-imagem{
-  height: 100%;
-  overflow: hidden;
-}
-.card-header{
-  font-size: 1.5rem;
-  background-color: white;
-}
-@media (min-width: 576px){
-  .card-columns {
-    column-count: 5;
-  }
+  height: 95vh;
+  display: inherit;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.anime{
+  height: 30vh;
+  width: 18vh;
+  margin-left: 2rem;
 }
